fix: fix results bar 'x' button alignment on desktop (#158)

--- a/src/app/find/mapPage/mapPage.css
+++ b/src/app/find/mapPage/mapPage.css
@@ -14,6 +14,7 @@
 
 .resultsBarInner {
 	display: flex;
+	justify-content: space-between;
 }
 
 .resultsBarInner .iconWrapper {
